# diplomski

./: .gitignore  Caddyfile  README.md
backend/: .gitignore  pom.xml  pyproject.toml
backend/backend/: .gitignore  README.md  __init__.py  constrained_random.py  db.py  dtos.py  main.py  manager.py  models.py  parsers.py  populations.py  repo.py  runner.py  utils.py  views.py
backend/sql/: schema.sql
backend/src/main/java/hr/fer/bernardcrnkovic/mtsp/: App.java  Loader.java  Problem.java  ProblemReader.java
backend/src/main/java/hr/fer/bernardcrnkovic/mtsp/io/: Loader.java
backend/src/main/java/hr/fer/bernardcrnkovic/mtsp/model/: Problem.java  Solution.java
backend/src/main/java/hr/fer/bernardcrnkovic/mtsp/operator/: Mutation.java
backend/src/main/java/hr/fer/bernardcrnkovic/mtsp/rest/: Api.java  PopulationService.java  ProblemRepo.java  ProblemService.java
backend/src/main/java/hr/fer/bernardcrnkovic/mtsp/rest/model/: Attachment.java  CreateProblem.java
backend/src/main/resources/: init.sql
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/lib/: forms.ts
frontend/src/models/: problem.ts
frontend/src/pages/: Home.tsx  PopulationForm.tsx  PopulationList.tsx  ProblemForm.tsx  ProblemList.tsx  Problems.tsx  RunForm.tsx  RunList.tsx  RunView.tsx  WorkerList.tsx  forms.ts  index.d.ts
runner/: .gitignore  pom.xml
runner/src/main/java/hr/fer/bernardcrnkovic/mtsp/: App.java  ParamOpt.java  Parsing.java  Parsing2.java  UpdateQueue.java  WsHandler.java
runner/src/main/java/hr/fer/bernardcrnkovic/mtsp/algo/: FastNonDomSort.java  FitnessPublisher.java  NSGA2.java  NSGAIIExample.java  SwapSubSeq.java
runner/src/main/java/hr/fer/bernardcrnkovic/mtsp/io/: Loader.java
runner/src/main/java/hr/fer/bernardcrnkovic/mtsp/metric/: FitnessMetricAccumulator.java  GenerationTimeAccumulator.java  MetricExtractors.java
runner/src/main/java/hr/fer/bernardcrnkovic/mtsp/model/: Configuration.java  DataPoint.java  EvolutionConfig.java  EvolutionState.java  Fitness.java  Metrics.java  Population.java  Problem.java  Run.java  Salesman.java  Solution.java
runner/src/main/java/hr/fer/bernardcrnkovic/mtsp/operator/: Compact.java  Crossover.java  Crossovers.java  EncDec.java  Encoder.java  Evaluator.java  (+5 more)
runner/src/main/resources/: bayg29-population.json  bayg29-run.json  bayg29.json  drop.sql  eil101.json  schema.sql
runner/src/test/java/hr/fer/bernardcrnkovic/mtsp/: AppTest.java
test/plots/: main.py  pyproject.toml
test/plots/plots/: main.py
(+5 files in other folders)
